# code-analyser

./: .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  codecov.yml  example.py  gui_full_launcher.py  gui_prefs.json  pyproject.toml  requirements.txt  risky_tmp.py  run_tests.py  setup.bat  setup.ps1  setup.sh  test_pylint_names.py
.github/workflows/: ci.yml  test.yml
artifacts/: metrics.json
artifacts/dashboard/: README.txt  index.html
artifacts/overlays/: JqkaEmotionRecorder.html  JqkaEmotionRecorder.json  __init__.html  __init__.json  __main__.html  __main__.json  account.html  account.json  actor_meta.html  actor_meta.json  actor_runner.html  actor_runner.json  ai_suggestion.html  ai_suggestion.json  algorithm.html  algorithm.json  alpha.html  alpha.json  alpha_158.html  alpha_158.json  ana.html  ana.json  analysis_model_performance.html  analysis_model_performance.json  api.html  api.json  app.html  app.json  aux_info.html  aux_info.json  axis.html  axis.json  backtest.html  backtest.json  backtesting.html  backtesting.json  bar_test.html  bar_test.json  base.html  base.json  (+1136 more)
checkpoints/supervised/: model_epoch_1.pt  model_epoch_10.pt  model_epoch_2.pt  model_epoch_3.pt  model_epoch_4.pt  model_epoch_5.pt  model_epoch_6.pt  model_epoch_7.pt  model_epoch_8.pt  model_epoch_9.pt
datasets/annotated_fintech/: annotation_summary.csv  dashboard.html  x.json
datasets/eval/: snippets.csv
datasets/train/: supervised_balanced.csv
datasets/val/: val.csv
docs/: Dissertation.docx
eval/: eval.py
examples/: risky.py
gui/: __init__.py  chart_utils.py  file_ops.py  gui_components.py  gui_logic.py  main.py  shared_state.py
logs/tensorboard/: events.out.tfevents.1754692099.DESKTOP-BP0C686.22788.0  training_metrics.csv
models/trained_model/: model.safetensors  thresholds.json
runs/annotation_confidences/: events.out.tfevents.1754437288.DESKTOP-BP0C686.24996.0  events.out.tfevents.1754516388.DESKTOP-BP0C686.20164.0  events.out.tfevents.1754524669.DESKTOP-BP0C686.20968.0  events.out.tfevents.1754578087.DESKTOP-BP0C686.6776.0
runs/supervised/: events.out.tfevents.1753903231.DESKTOP-BP0C686.3400.0
scripts/: batch_annotate_fintech.py  batch_annotate_trainning_data.py  convert_to_supervised.py  generate_summary.py  generate_training_data.py  populate_github_fintech.py
services/: analyser_model_service.py
src/api/: batch_mode_router.py
src/gui/: __init__.py  chart_utils.py  file_ops.py  gui_components.py  gui_logic.py  heatmap_renderer.py  main.py  model_service_gui.py  overlay_loader.py  shared_state.py  utils.py
src/metrics/: __init__.py  __main__.py  ai_overlays.py  gather.py  main.py  metric_types.py  utils.py
src/ml/: __init__.py  __main__.py  ai_cache.py  ai_metric_names.py  ai_signal_utils.py  cli_stats.py  compare_modes.py  config.py  config_manager.py  dataset_loader.py  email_zip_sender.py  eval_and_export.py  export.py  fusion.py  generate_annotated_dataset.py  html_dashboard.py  huggingface_uploader.py  inference.py  key_manager.py  model_client.py  model_tf.py  model_torch.py  ollama_llm_annotator.py  openai_annotator.py  overlay_export.py  (+14 more)
tests/: __init__.py  conftest.py  sitecustomize.py  test_ast_metric_loading.py  test_ast_plugins.py  test_auto_generated.py  test_bandit_plugin_system.py  test_bandit_plugins.py  test_chart_utils.py  test_chart_utils_pylint_scope.py  test_cli_output.py  test_cloc_plugins.py  test_code_analyser.py  test_extractor_ast.py  test_extractor_bandit.py  test_fail_if_nonzero.py  test_fail_threshold.py  test_file_ops.py  test_flake8_plugins.py  test_gather.py  test_gui_init.py  test_gui_logic.py  test_lizard_plugins.py  test_plugins.py  test_pydocstyle_plugins.py  test_pyflakes_plugins.py  test_pylint_plugins.py  test_radon_plugins.py  test_shared_state.py  test_sonar_plugins.py  test_summary_output_txt.py  test_vulture_plugins.py
tools/: calibrate_thresholds.py  plot_threshold_sweep.py  train_again.py
trained_model/: tokenizer.json
(+3486 files in other folders)
