[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "code-analyser"
version = "1.0.0"
description = "Pluggable AST, Bandit, and static analysis metric extractor for Python code quality analysis with optional GUI"
authors = [
    { name = "Samuel Harrison", email = "sh18784@essex.ac.uk" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "matplotlib>=3.5",
    "mplcursors>=0.5",
    "bandit>=1.7.5",
    "flake8>=5.0.0",
    "lizard>=1.17.10",
    "pylint>=3.1.0",
    "pydocstyle>=6.3.0",
    "pyflakes>=3.2.0",
    "setuptools>=61.0"
]

[project.optional-dependencies]
gui = [
    "matplotlib>=3.5",
    "mplcursors>=0.5"
]

[project.scripts]
code-analyser = "metrics.main:main"
code-analyser-gui = "gui.main:show_splash_and_start"

[tool.setuptools.packages.find]
where = ["src"]
