[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "code_analyser"
version = "1.0.0"
description = "Modular static analysis toolkit for Python code quality: AST, Bandit, Flake8, Pylint, Radon, and more, with optional Tkinter GUI."
authors = [
    { name = "Samuel Harrison", email = "sh18784@essex.ac.uk" }
]
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "matplotlib>=3.5",
    "mplcursors>=0.5",
    "bandit>=1.7.5",
    "flake8>=5.0.0",
    "lizard>=1.17.10",
    "pylint>=3.1.0",
    "pydocstyle>=6.3.0",
    "pyflakes>=3.2.0",
    "radon>=6.0.1",
    "vulture>=2.14",
    "python-dotenv>=1.1.1",
    "requests>=2.31.0"
]

[project.optional-dependencies]
gui = [
    "matplotlib>=3.5",
    "mplcursors>=0.5"
    # Tkinter is built-in with most Python installations
]

[tool.ruff.lint]
# Disable specific error codes globally
ignore = ["E402", "F401", "F821", "F841", "E741", "E731", "E401", "E702", "E701"]

# Use Black to keep code style consistent across the repo.
[tool.black]
# Keep lines readable while avoiding constant wrapping in your codebase.
line-length = 100
# Match your CI’s Python version so string/number formatting rules are consistent.
target-version = ["py312"]
# Respect your datasets folder and common junk dirs.
extend-exclude = "(^|/)(datasets|\\.venv|node_modules|build|dist)/"


[project.scripts]
code_analyser = "metrics.main:main"
code_analyser_gui = "gui.main:show_splash_and_start"

[tool.setuptools.packages.find]
where = ["src"]
include = ["metrics", "gui"]

[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-v --import-mode=importlib"
